fixed overflow on home page

--- a/src/components/ui/styles/carousel.module.css
+++ b/src/components/ui/styles/carousel.module.css
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   /* font-family: "Roboto", sans-serif; */
-  height: 80vh;
+  height: 85vh;
   overflow: hidden;
 }
 a,
